--- a/templates/data_entry.html
+++ b/templates/data_entry.html
@@ -78,7 +78,8 @@
         .input-group input[type="tel"],
         .input-group input[type="number"],
         .input-group input[type="date"],
-        .input-group textarea {
+        .input-group textarea ,
+        .input-group select {
             width: 100%; /* Make input fields take full width of their container */
             padding: 12px 15px;
             border: 1px solid var(--border-color);
