--- a/templates/main_menu.html
+++ b/templates/main_menu.html
@@ -274,6 +274,7 @@
             </div>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>
         document.addEventListener('DOMContentLoaded', function() {
             // ดึงค่า CSS variable สำหรับใช้ใน Chart.js
